# camrem

./: .gitignore  .gitmodules  .travis-coverages.sh  .travis.yml  CMakeLists.txt  README.md  config.json
cmake/modules/: FindGphoto2.cmake  FindMicrohttpd.cmake
docs/examples/: camera_config_values_eos450d.json  camera_config_values_eos50d.json  config_eos450d.txt
html/: 404.html
html/webui/: index.html  preview_test.html
src/: ConfigHandler.cpp  ConfigHandler.h  Helpers.cpp  Helpers.h  Http.cpp  Http.h  HttpContext.cpp  HttpContext.h  HttpDaemon.cpp  HttpDaemon.h  camrem.cpp
src/Cam/: Action.cpp  Action.h  Cam.cpp  Cam.h  CamFacade.cpp  CamFacade.h  CamHandler.cpp  CamHandler.h  Camera.cpp  Camera.h  GPWrapper.cpp  GPWrapper.h  Result.cpp  Result.h
src/Cam/GPWrapper/: GPhotoAbilitiesList.cpp  GPhotoAbilitiesList.h  GPhotoCamera.cpp  GPhotoCamera.h  GPhotoCameraFile.cpp  GPhotoCameraFile.h  GPhotoCameraList.cpp  GPhotoCameraList.h  GPhotoCameraWidget.cpp  GPhotoCameraWidget.h  GPhotoContext.cpp  GPhotoContext.h  GPhotoPortInfoList.cpp  GPhotoPortInfoList.h
src/Http/: ApiBindings.cpp  ApiBindings.h  Bindings.cpp  Bindings.h  Context.cpp  Context.h  Daemon.cpp  Daemon.h  FileResponse.cpp  FileResponse.h  Http.cpp  Http.h  MemoryResponse.cpp  MemoryResponse.h  Request.cpp  Request.h  Response.cpp  Response.h
tests/: integration_offline.yml  test_config.json  test_fail.json  tests.cpp  tests.h  unit_tests.cpp  unit_tests.h
